@@ -6,8 +6,6 @@ std::ostream & operator << (std::ostream & out, const StringKey &s)
   return out;
 }
 
-char *StringKey::empty = "";
-
 #ifdef STRINGPOOL
 HashTable<StringKey, int> StringPool::counts;
 #endif
