@@ -1,0 +1,3 @@
+#include "stringkey.h"
+
+char *StringKey::empty = "";
